# xbee-comm

./: .gitignore  Makefile.am  README  build.sh  configure.ac
src/lib/: buffer.c  buffer.h  xb_buffer.c  xb_buffer.h  xb_ctx.c  xb_ctx.h
src/ui/: xbc-gui.c  xbee-comm.glade
